--- a/gb/24/2/7/n14175844.md
+++ b/gb/24/2/7/n14175844.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【百年真相】武装走私毒品 中共早年续命秘方</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14175860-1200x800-41-600x400.jpg" />///image2=```diff
 - 中国近代史是以1840年鸦片战争开始的。表面上中国共产党也称鸦片有“亡国灭种”的危害，但是令许多中国人想不到的是，中共的产生、发展、壮大，都与鸦片有重大关系。（《百年真相》提供）
@@ -8,11 +8,11 @@
 <h6>中国近代史是以1840年鸦片战争开始的。表面上中国共产党也称鸦片有“亡国灭种”的危害，但是令许多中国人想不到的是，中共的产生、发展、壮大，都与鸦片有重大关系。（《百年真相》提供）
 </h6>
 <hr>
-	<p>观众朋友，大家好，欢迎收看《<ahref="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c">百年真相</a>》。</p>
-<p>中国近代史是以1840年<ahref="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c">鸦片</a>战争开始的。此前，英国向中国倾销<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%B8%A6%E7%89%87.md#1">鸦片</a>，严重危害中国人的身心健康，造成白银大量外流，引发清王朝统治危机。</p>
-<p>表面上，中国共产党也称<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%B8%A6%E7%89%87.md#1">鸦片</a>有“亡国灭种”的危害，但是，令许多中国人想不到的是，中共的产生、发展、壮大，都与鸦片有重大关系。</p>
-<p>本期节目，我们就根据《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89.md#1">延安</a>时期的“<ahref="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c">特产</a>”贸易》等资料，说说1940年代初，毛泽东是怎么利用鸦片救中共的。</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://d3vg08phoazui6.cloudfront.net/Q6oAXUiXs"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/C-TA6nAFo3o?si=M1f6bGp6gpSkU4EM" width="640" b="360" allowfullscreen="allowfullscreen"></a></center></p>
+	<p>观众朋友，大家好，欢迎收看《<ahref=""></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c">百年真相</a>》。</p>
+<p>中国近代史是以1840年<ahref=""></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c">鸦片</a>战争开始的。此前，英国向中国倾销鸦片，严重危害中国人的身心健康，造成白银大量外流，引发清王朝统治危机。</p>
+<p>表面上，中国共产党也称鸦片有“亡国灭种”的危害，但是，令许多中国人想不到的是，中共的产生、发展、壮大，都与鸦片有重大关系。</p>
+<p>本期节目，我们就根据《延安时期的“<ahref=""></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c">特产</a>”贸易》等资料，说说1940年代初，毛泽东是怎么利用鸦片救中共的。</p>
+<p><center><a title="YouTube video player" loading="lazy" data2-src=""></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/C-TA6nAFo3o?si=M1f6bGp6gpSkU4EM" width="640" b="360" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>不打日军打国军</h2>
 <p>1937年7月，抗日战争全面爆发。苏共中央总书记斯大林，为防止日军进攻苏联，竭力促成中共与国民党建立“抗日统一战线”。中共军队被改编成国民革命军第八路军、国民革命军陆军新编第四军，接受中华民国军事委员会委员长蒋介石的统一指挥。</p>
 <p>从抗战初期到1941年初，蒋介石持续给中共发放军饷、枪支弹药和军需物资等，中共的大本营——陕甘宁边区的财政，年年有结余。</p>
@@ -24,7 +24,7 @@
 <p>但是，怎么弄钱呢？毛分析来分析去，认为来钱最多最快的办法，就是经营“土产”了。</p>
 <p>所谓“土产”就是鸦片。当时，中共也知道经营鸦片生意不好听，于是，给鸦片取了各种代名词，如土货、特货、土产等。</p>
 <p>为什么说做鸦片生意来钱最多最快呢？</p>
-<p>据《陕甘宁边区财政经济史》讲，按<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BB%B6%E5%AE%89.md#1">延安</a>市主要物品价格比较，1942年12月，小米1斗是陕甘宁边币125元，而鸦片一两就卖到1400元。以此换算，鸦片一两值小米11.2斗，鸦片一斤值小米5376斤。按当时的粮食供给标准“每人每天吃粮一斤四两，只军队多些，每人每天一斤八两”来计算，1000斤鸦片，就可以解决一支万人军队一年的口粮问题。</p>
+<p>据《陕甘宁边区财政经济史》讲，按延安市主要物品价格比较，1942年12月，小米1斗是陕甘宁边币125元，而鸦片一两就卖到1400元。以此换算，鸦片一两值小米11.2斗，鸦片一斤值小米5376斤。按当时的粮食供给标准“每人每天吃粮一斤四两，只军队多些，每人每天一斤八两”来计算，1000斤鸦片，就可以解决一支万人军队一年的口粮问题。</p>
 <p>毛泽东拍板后，南汉宸立即着手实施一条不同以往的生财之道：在中共统一领导下，种植、加工、收购、销售鸦片。</p>
 <h2>主产地——晋西北</h2>
 <p>台湾历史学者陈永发在《红太阳下的罂粟花：鸦片贸易与延安模式》一书中记载：1942年，陕甘宁边区和晋绥边区开始大量种植鸦片。</p>
@@ -35,10 +35,10 @@
 <p>不仅广种鸦片，中共还加工鸦片，统一收购鸦片。</p>
 <p>1943年初，为统一陕甘宁、晋绥两边区的财经领导，中共成立西北财经办事处，由陕甘宁晋绥联防军司令员贺龙领导。</p>
 <p>从1943年起，陕甘宁边区的财政支出，主要依靠晋绥边区的鸦片生意支援。</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%A0%E6%80%9D%E5%BE%B7.md#1">张思德</a>烧制鸦片被砸死</h2>
+<h2>张思德烧制鸦片被砸死</h2>
 <p>当时，毛泽东与南汉宸商定，解决陕甘宁边区财政危机的大计是：“明修栈道，暗渡陈仓”。</p>
 <p>“明修栈道”，就是对外公开宣称开展“大生产运动”；“暗渡陈仓”，就是悄悄经营鸦片生意。</p>
-<p>1944年，担任过毛泽东警卫的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%A0%E6%80%9D%E5%BE%B7.md#1">张思德</a>参加“大生产运动”，在延安安塞县烧木炭，9月5日，因窑洞塌方被砸死。</p>
+<p>1944年，担任过毛泽东警卫的张思德参加“大生产运动”，在延安安塞县烧木炭，9月5日，因窑洞塌方被砸死。</p>
 <p>张思德死后，中共中央直属机关为他举办追悼会，毛亲自出席并讲话，称赞张思德是“为人民利益而死”，他的死“比泰山还要重”。这篇讲话后来被冠以“为人民服务”的标题，在中国大陆广传。</p>
 <p>中国艺术研究院研究员张耀杰，曾亲自到南泥湾考察。他说：“据当地政府官员讲，南泥湾本来是延安地区唯一的原始森林，被王震的359旅用极其野蛮落后的方式砍伐烧荒后，种植了大片的鸦片，《为人民服务》中的张思德，就是在烧制烟土的过程中被活埋在窑洞里面的。”</p>
 <h2>武装走私毒品</h2>
@@ -57,7 +57,7 @@
 <p>据《晋绥边区财政经济史》披露：特货在晋绥边区对外贸易中占有绝对地位。1943年起，“特货七八年来成为西北支持财政、稳定金融、周转贸易之杠杆”，“解决了财政经费的百分之七十上下”。</p>
 <p>晋绥边区数年来直接上缴中央部分，占财政总收入的50%～60%，甚至达80%。</p>
 <p>这些鸦片换来了陕甘宁边区衣、食、住、行、用等各种物资。所以，完全可以说，是鸦片生意挽救了中共。</p>
-<p><center><a title="中共种鸦片 #百年真相" src="https://www.ganjingworld.com/zh-CN/embed/1ggqli523v93xENW3RN6XGjTu1no1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a title="中共种鸦片 #百年真相" loading="lazy" data2-src=""></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-CN/embed/1ggqli523v93xENW3RN6XGjTu1no1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>祸国殃民</h2>
 <p>中华民国政府从1912年成立起就开始禁绝鸦片。此后，接连不断发布法律法规禁绝鸦片，包括禁种、禁运、禁售、禁吸。</p>
 <p>但是1940年代初，在国难当头、国军将士在抗日前线浴血奋战时，中共不仅大量种植、烧制鸦片，而且持续不断向国民党统治区运输、销售鸦片。</p>
@@ -66,46 +66,47 @@
 <p>1942年2月6日，中共中央召开了一次由南汉宸报告财经状况的会议。从国统区投奔延安的作家萧军应邀旁听。得知中共为了钱，“制作鸦片烟膏”，他心里很不是滋味。</p>
 <p>萧军在日记中写道，原来，“革命的花是从最卑污的粪壤里开出来的”。</p>
 <p>好了，今天的节目就到这儿了，谢谢您的收看，我们下期再见。</p>
-<p>欢迎订阅干净世界频道：<ahref="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c">https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c</a><br />
-欢迎订阅YouTube频道：<ahref=""></a><a href="https://d3vg08phoazui6.cloudfront.net/Q6oAXUiXs"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCJ0WwxWijk8NemAqLtqj4Sw">"></a><a href="https://d3vg08phoazui6.cloudfront.net/Q6oAXUiXs"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCJ0WwxWijk8NemAqLtqj4Sw</a><br />
+<p>欢迎订阅干净世界频道：<ahref=""></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c">"></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/channel/1f702725eeg3uz4eAgKxHgadC1kh0c</a><br />
+欢迎订阅YouTube频道：<ahref=""></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCJ0WwxWijk8NemAqLtqj4Sw">"></a><a href="https://d3vg08phoazui6.cloudfront.net/P8nMrAdBJGIr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCJ0WwxWijk8NemAqLtqj4Sw</a><br />
 订阅Telegram群组：<ahref="https://t.me/bainianzhenxiang">https://t.me/bainianzhenxiang</a></p>
-<p>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e7%99%be%e5%b9%b4%e7%9c%9f%e7%9b%b8.md#1">百年真相</a>》节目组制作</p>
+<p>《<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e7%99%be%e5%b9%b4%e7%9c%9f%e7%9b%b8.md#1">百年真相</a>》节目组制作</p>
 <p>责任编辑：李昊#</p>
 <div id="gtx-trans" style="position: absolute; left: 229px; top: 490.738px;"></div>
 <div id="popupMenu"></div>
-	
-<hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/10/n14155479.md#1">【百年真相】紧急逃离武汉 毛的危机时刻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14167376.md#1">【百年真相】败退大别山 刘邓大军难堪历史</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171417.md#1">【百年真相】实现这一点 中共马上倒台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172339.md#1">【百年真相】党治香港 现九大灾难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">更新：手柄可拆卸11件套锅具 6折优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/2/9/n10129004.md#1" target="_blank">袁斌：中共早期“革命史”的真相（2）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（3）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171656.md#1">我们竟然过了一百年的假“春节”？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14173543.md#1">【未解之谜】一切皆有定数？预言中的中国未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174106.md#1">围炉过年：从除夕到元日的民俗守护人心中的善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14170820.md#1">过年习俗：腊月到正月 22天不重样！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178929.md#1">【新闻大家谈】春晚又翻车 6万北京人聚雍和宫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177495.md#1">【菁英论坛】年末奇葩 “熊段子”火遍美国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177515.md#1">【车评】义式PHEV 2024 Alfa Romeo Tonale Veloce AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178603.md#1">【时事军事】台湾F-16变身蝰蛇 空地通吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178616.md#1">中港股市蒸发7万亿 中共救市难阻A股跌势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177954.md#1">【菁英论坛】雍和宫传失火 习家与佛教渊源</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14178009.md#1">央视春晚魔术再穿帮 刘谦被爆含泪离开舞台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178860.md#1">杜可风澳洲迎娶大陆女导演黑文 婚礼画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179782.md#1">陆女星贾玲减重50公斤 神隐8个月现身爆哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177994.md#1">楚一丁：《繁花》，一场在恐惧中绽放的梦幻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178646.md#1">刘品言录节目秀厨艺 男星无厘头发问惹她翻白眼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">针织帽 男女皆宜 61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177356.md#1">不敢吃鸡蛋？资深中医师：吃对反降胆固醇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179426.md#1">专家分享7招 增进你与配偶或情侣的关系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/7/n14175172.md#1">夜尿太多睡不好？1碗补肾茶让你和失眠说拜拜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14168968.md#1">猫行为解读：磨爪搞破坏 家俱破破烂烂</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/7/n14175844.htm">【百年真相】武装走私毒品 中共早年续命秘方</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/7/n14175844.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546042.md#1">【唐青看时事】王毅说漏嘴：无法接受俄战败</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542663.md#1">苦味可能对改善消化和血糖至关重要</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/7/n14175844.htm">【百年真相】武装走私毒品 中共早年续命秘方</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/7/n14175844.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
